# example-nix

./: .gitignore  build.nix  cabal.project  default.nix  nixpkgs-version.json  pkgs-make-version.json
doc/: haskell.md
examples/haskell/: cabal.project  default.nix  shell.nix  stack.yaml
examples/haskell/application/: example-haskell-app.cabal
examples/haskell/application/src/: Main.hs
examples/haskell/stack/: stack.nix
examples/python/: default.nix  shell.nix
examples/python/application/: default.nix  setup.py
examples/python/application/example_app/: __main__.py  web.py
modules/example-app-compact/: default.nix
modules/example-assets/: default.nix
pkgs-make/: default.nix
pkgs-make/haskell/: default.nix
pkgs-make/haskell/tools/cabal-new-watch/: cabal-new-watch
pkgs-make/lib/: default.nix  haskell.nix
pkgs-make/python/: default.nix
tools/direnv/: direnvrc
tools/oh-my-zsh/plugins/direnv/: direnv.plugin.zsh
tools/spacemacs/: dotfile.spacemacs
tools/spacemacs/private/direnv/: packages.el
tools/spacemacs/private/extn-haskell/: config.el  funcs.el  packages.el
tools/spacemacs/private/extn-spacemacs/: config.el  funcs.el  packages.el
